Fix to the popcorn that wasn't moving stick with the background

--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -16,7 +16,7 @@ a:hover {
   width: 160px;
   min-height:20px;
   overflow: visible;
-  position: fixed;
+  position: absolute;
   z-index: 9000;
   margin-top: 4px;
 }
