Added the data-stream attr to the element that will drive which tab will be selected by default

--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -148,6 +148,7 @@ a:hover {
 /* stream classes */
 .fatpopcorn .stream {
   padding: 10px 0px 10px 10px;
+  display: none;
 }
 .fatpopcorn .stream .content {
   max-height: 400px;
