--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -227,6 +227,18 @@ a:hover {
   display: inline;
   float: right;
 }
+.fatpopcorn .qq-upload-button {
+  font-style: italic;
+  cursor: pointer;
+  color: #0066ff;
+  text-decoration: none;
+  font-style: italic;
+  font-size: 12px;
+  float: right;
+}
+.fatpopcorn .qq-upload-button-hover {
+  color: #f56a00;
+}
 .fatpopcorn .edit .info {
   background-color: #f3f3f3;
   display: table;
@@ -280,4 +292,31 @@ a:hover {
   width: 100%;
   height: 100%;
   z-index: 810;
+}
+.fatpopcorn .qq-upload-drop-area {
+    position:absolute; 
+    top:0; 
+    left:0; 
+    width:100%; 
+    height:100%; 
+    min-height: 70px; 
+    z-index:802;
+    background:#ffffff; 
+    text-align:center; 
+    border: 2px dashed #566476;
+    border-radius: 4px;
+    background-color:#E4EDF5;
+}
+.fatpopcorn .qq-upload-drop-area span {
+    display:none; 
+    position:absolute; 
+    top: 50%; 
+    width:100%; 
+    margin-top:-8px; 
+    font-size:16px;
+    color: #566476;
+    /*text-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0;*/
+}
+.fatpopcorn .qq-upload-drop-area-active {
+  background-color:#E4EDF5;
 }
