--- a/app/assets/stylesheets/corn_js/fileuploader.css
+++ b/app/assets/stylesheets/corn_js/fileuploader.css
@@ -13,7 +13,7 @@
 .qq-upload-button-hover {background:transparent;}
 .qq-upload-button-focus {outline:1px dotted black;}
 
-.qq-upload-drop-area {
+/*.qq-upload-drop-area {
     position:absolute; top:0; left:0; width:100%; height:100%; min-height: 70px; z-index:2;
     background:#FF9797; text-align:center; 
 }
@@ -21,7 +21,43 @@
     display:block; position:absolute; top: 50%; width:100%; margin-top:-8px; font-size:16px;
 }
 .qq-upload-drop-area-active {background:#FF7171;}
-
+*/
+.qq-upload-drop-area {
+    display:none;
+    position:absolute; 
+    top:0; 
+    left:0; 
+    width:100%;
+    height:100%;
+    max-height: 100px;
+    min-height: 50px;
+    z-index:802;
+    background:#ffffff; 
+    text-align:center; 
+    border: 2px dashed #566476;
+    border-radius: 4px;
+    background:#ffffff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.35), 0 0 1px rgba(0, 0, 0, 0.5);
+}
+.qq-upload-drop-area span {
+    display:block; 
+    position:absolute; 
+    top: 50%; 
+    width:100%; 
+    margin-top:-8px; 
+    font-size:16px;
+    color: #ccc;
+    background:transparent;
+    text-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0;
+}
+.qq-upload-drop-area-active span {
+  color: #566476;
+}
+.qq-upload-drop-area-active {
+  color: #566476;
+  background:#E4EDF5;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.35), 0 0 1px rgba(0, 0, 0, 0.5);
+}
 .qq-upload-list {margin:15px 35px; padding:0; list-style:none;}
 .qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
 .qq-upload-file, .qq-upload-spinner, .qq-upload-size, .qq-upload-cancel, .qq-upload-failed-text {
