--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -178,12 +178,21 @@ a:hover {
   vertical-align: bottom;
   white-space: nowrap;
 }
-.fatpopcorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
-  -webkit-box-shadow: 0px 2px 4px rgba(50, 50, 50, 0.35);
-  -moz-box-shadow:    0px 2px 4px rgba(50, 50, 50, 0.35);
-  box-shadow:         0px 2px 4px rgba(50, 50, 50, 0.35);  
+.fatpopcorn .stream .content > div {
+  padding: 1px;
+  margin-top: 4px;
 }
-div > h1 > span.star, div > h1 > span.delete {
+.fatpopcorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
+  -webkit-box-shadow: 0px 0px 4px rgba(50, 50, 50, 0.50);
+  -moz-box-shadow:    0px 0px 4px rgba(50, 50, 50, 0.50);
+  box-shadow:         0px 0px 4px rgba(50, 50, 50, 0.50);  
+}
+
+.fatpopcorn .stream div > h1 {
+  margin-top: 4px;
+}
+
+.fatpopcorn .stream div > h1 > span.star, .fatpopcorn .stream div > h1 > span.delete {  
   display: block;
   width: 12px;
   height: 12px; 
@@ -241,6 +250,9 @@ div > h1 > span.delete:hover {
 }
 .fatpopcorn .edit .note {
   margin: 10px 10px 26px 10px;
+}
+.fatpopcorn .edit #send_note {
+  padding-right: 6px;
 }
 .fatpopcorn .edit .attachment {
   margin: 10px 10px 26px 10px;
