--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -242,7 +242,7 @@ div > h1 > span.delete:hover {
   font-style: italic;
   color: #303030;
   white-space: nowrap;
-  margin 0;
+  margin: 0;
   font-weight: normal;
 }
 .fatpopcorn .edit .watchlist { 
