--- a/app/assets/stylesheets/corn_js/stickycorn.css
+++ b/app/assets/stylesheets/corn_js/stickycorn.css
@@ -71,11 +71,12 @@
 
 /* header classes */
 .stickycorn .header {
-  width: 100%;
-  height: 34px;
+  width: 100% !important;
+  height: 34px !important;
   background-color: #E4EDF5 !important;
-  border-bottom: 1px #8FA2B4 solid;
-  border-radius: 5px 5px 0px 0px;
+  border-bottom: 1px #8FA2B4 solid!important;
+  border-radius: 5px 5px 0px 0px !important;
+  float: none !important;
 }
 .stickycorn .header ul {
   list-style: none;
