--- a/app/assets/stylesheets/corn_js/stickycorn.css
+++ b/app/assets/stylesheets/corn_js/stickycorn.css
@@ -1,33 +1,15 @@
 .stickycorn {
   width: 100%;
   min-height: 550px;
-  /*margin-bottom: 30px;*/
-  /*overflow: hidden;*/
-
-  /*border: 1px solid #8FA2B4;*/
-  /*border-radius: 5px;*/
-  /*-webkit-border-radius: 5px;*/
-  /*-moz-border-radius: 5px;*/
-  /*box-shadow: 0 0 5px rgba(0, 0, 0, .15);*/
-  /*-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .15);*/
-  /*-moz-box-shadow: 0 0 5px rgba(0, 0, 0, .15);*/
-  /*-moz-background-clip: padding-box;*/
-  /*-webkit-background-clip: padding-box;*/
-  /*background-clip: padding-box;*/
-  /*position: relative;*/
-  /*padding: 15px 10px;*/
-  /*margin-top: 10px;*/
-
+  position: absolute;
   background: none repeat scroll 0 0 #FFFFFF;
   border: medium none;
 
   color: #444444;
   font-size: 11px;
-  /*width: 160px;*/
   overflow: visible;
-  /*position: absolute;*/
-  /*z-index: 800;*/
   margin-top: 4px;
+  width: 160px;
 }
 
 /* ----------------*/
