--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -79,7 +79,7 @@ a:hover {
 }
 .fatpopcorn h1 {
   font: bold 12px/14px "Segoe UI","Lucida Grande",Arial,sans-serif;
-  margin: 12px 0 4px 0;
+  margin: 12px 0 4px 0 !important;
   padding-left: 15px;
   font-size: 12px;
   color: #303030;
@@ -277,7 +277,9 @@ div > h1 > span.delete:hover {
   margin: 10px 10px 16px 10px;
 }
 .fatpopcorn .edit .note {
+  float: left;
   margin: 10px 10px 26px 10px;
+  width: 94%;
 }
 .fatpopcorn .edit #send_note {
   padding-right: 6px;
@@ -332,7 +334,7 @@ div > h1 > span.delete:hover {
 }
 
 .fatpopcorn .edit textarea {
-  width: 98%;
+  width: 97%;
   margin-left: 2px;
   resize: none;
   border-width: 1px;
