--- a/app/assets/stylesheets/corn_js/stickycorn.css
+++ b/app/assets/stylesheets/corn_js/stickycorn.css
@@ -276,7 +276,7 @@
   left: 10px;
   font-size: 22px;
   color: #ccc;
-  background-color: #ffffff !important;
+  background-color: inherit !important;
   text-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0;
 }
 .stickycorn .loader {
