--- a/app/assets/stylesheets/corn_js/corn.css
+++ b/app/assets/stylesheets/corn_js/corn.css
@@ -200,11 +200,11 @@ a:hover {
   padding: 1px;
   margin-top: 4px;
 }
-.fatpopcorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
+/*.fatpopcorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
   -webkit-box-shadow: 0px 0px 4px rgba(50, 50, 50, 0.50);
   -moz-box-shadow:    0px 0px 4px rgba(50, 50, 50, 0.50);
   box-shadow:         0px 0px 4px rgba(50, 50, 50, 0.50);  
-}
+}*/
 
 .fatpopcorn .stream div > h1 {
   margin-top: 4px;
