--- a/app/assets/stylesheets/corn_js/stickycorn.css
+++ b/app/assets/stylesheets/corn_js/stickycorn.css
@@ -134,11 +134,11 @@
   padding: 1px;
   margin-top: 4px;
 }
-.stickycorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
+/*.stickycorn .stream .content > div.note:hover, .fatpopcorn .stream .content > div.attachment:hover {
   -webkit-box-shadow: 0px 0px 4px rgba(50, 50, 50, 0.50);
   -moz-box-shadow:    0px 0px 4px rgba(50, 50, 50, 0.50);
   box-shadow:         0px 0px 4px rgba(50, 50, 50, 0.50);  
-}
+}*/
 
 .stickycorn .stream div > h1 {
   margin-top: 4px;
